@@ -544,6 +544,10 @@ function Item:execute()
     if state.class == 'BRD' and mq.TLO.Me.Casting() and self.MyCastTime > 500 then mq.cmd('/stopcast') mq.delay(250) end
     if logger.flags.announce.item then logger.info('Use Item: \ag%s\ax%s', self.Name, self.TargetType == 'Single' and (' on \at%s\ax'):format(mq.TLO.Target.CleanName()) or '') end
     mq.cmdf('/useitem "%s"', self.Name)
+    if self.MyCastTime < 500 then
+        mq.delay(500, function() return not mq.TLO.Me.ItemReady(self.Name)() end)
+        return not mq.TLO.Me.ItemReady(self.Name)()
+    end
     state.setCastingState(self)
     return true
 end
