@@ -230,7 +230,8 @@ local function checkClickiesLoaded(base)
                     end
                 end
                 if not found then
-                    base:addClicky({name=clickyName, clickyType=clicky.clickyType, summonMinimum=clicky.summonMinimum, opt=clicky.opt, enabled=clicky.enabled})
+                    -- base:addClicky({name=clickyName, clickyType=clicky.clickyType, summonMinimum=clicky.summonMinimum, opt=clicky.opt, enabled=clicky.enabled})
+                    base:addClicky(clicky)
                 end
             end
         end
